# oravia

./: README.md  dev.sh  pyproject.toml
docs/: PERSONAS.md  ROADMAP.md  SUPABASE_SCHEMA.sql  USER_GUIDE.md  canvas_gerado  melhorias  planilha
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css
frontend/src/app/[locale/]/: layout.tsx  page.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/[locale]/share/[id]/: page.tsx
frontend/src/components/features/: Dashboard.tsx  Stepper.tsx
frontend/src/components/features/auth/: AuthModal.tsx  PricingModal.tsx
frontend/src/components/features/pro/: EVEKnowledge.tsx  ProCAPEX.tsx  ProComparison.tsx  ProOPEX.tsx  ProOverview.tsx  ProReports.tsx  ProSales.tsx
frontend/src/components/shared/: LocaleSwitcher.tsx
frontend/src/components/ui/: checkbox.tsx
frontend/src/i18n/: routing.ts
frontend/src/messages/: en.json  es.json  pt-BR.json
oravia-api/: README.md  pyproject.toml  test_advanced.py  test_engine.py
oravia-api/app/: engine.py  main.py  schemas.py
oravia-api/tests/: conftest.py  test_api.py
