[project]
name = "oravia-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "nodeenv>=1.10.0",
    "numpy-financial>=1.0.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
]
