[project]
name = "oravia-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "nodeenv>=1.10.0",
    "numpy-financial>=1.0.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
